--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "AJ Kalendarz Treningowy",
   "short_name": "AJ Kalendarz",
-  "start_url": "./",
-  "scope": "/",
+  "start_url": "/",
+"scope": "/"
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
