--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
   "name": "AJ Kalendarz Treningowy",
   "short_name": "AJ Kalendarz",
   "start_url": "/",
-"scope": "/"
+  "scope": "/",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "background_color": "#ffffff",
+  "theme_color": "#22c55e",
   "icons": [
     {
       "src": "/icons/icon-192.png",
