--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "AJ Kalendarz Treningowy",
   "short_name": "AJ Kalendarz",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "https://kalendarz-treningowy-aj.vercel.app/",
+  "scope": "https://kalendarz-treningowy-aj.vercel.app/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#22c55e",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "/icons/icon-192.png",
@@ -17,5 +17,6 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "id": "/?app=aj-kalendarz"
 }
