--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "AJ Kalendarz Treningowy",
   "short_name": "AJ Kalendarz",
-  "start_url": "./",
-  "scope": "./",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
@@ -20,6 +20,5 @@
   ],
   "id": "/?app=aj-kalendarz",
   "orientation": "portrait",
-  "description": "AJ Kalendarz Treningowy — działa offline jako aplikacja PWA.",
-  "prefer_related_applications": false
+  "description": "AJ Kalendarz – aplikacja PWA działająca offline."
 }
