--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#000000",
+  "theme_color": "#22c55e",
   "icons": [
     {
       "src": "/icons/icon-192.png",
@@ -15,7 +15,8 @@
     {
       "src": "/icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "id": "/?app=aj-kalendarz",
